{{$NEXT}}

0.003     2015-11-13 20:19:45 EST
  - Updated to support Minion 4.0
  - Allow retry methods to change options for already inactive jobs

0.002     2015-10-30 17:35:29 EDT
  - Added support for retrying failed jobs automatically in Minion 3.01

0.001     2015-10-28 21:59:55 EDT
  - First release