@@ -1,5 +1,5 @@
 # This Build.PL for Minion-Backend-SQLite was generated by
-# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.022
+# Dist::Zilla::Plugin::ModuleBuildTiny::Fallback 0.023
 use strict;
 use warnings;
 
@@ -68,7 +68,7 @@ EOW
     }
 
 
-    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.041.
+    # This section was automatically generated by Dist::Zilla::Plugin::ModuleBuild v5.043.
     use strict;
     use warnings;
 
@@ -91,7 +91,7 @@ EOW
       "requires" => {
         "DBI" => "0.88",
         "Minion" => "4.0",
-        "Mojo::SQLite" => "0.018",
+        "Mojo::SQLite" => "0.020",
         "Mojolicious" => "6.0",
         "Sys::Hostname" => 0,
         "Time::HiRes" => 0,
