@@ -1,7 +1,7 @@
 requires 'perl' => '5.010001';
 requires 'DBI' => '0.88';
 requires 'Minion' => '4.0';
-requires 'Mojo::SQLite' => '0.018';
+requires 'Mojo::SQLite' => '0.020';
 requires 'Mojolicious' => '6.0';
 requires 'Sys::Hostname';
 requires 'Time::HiRes';
